Fix reponsiveness on mobile devices

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,8 +17,8 @@ body {
 }
 
 header {
-    min-height: 370px;
-    padding: 2.5em 0;
+    min-height: 94vh;
+    padding-top: 20%;
 }
 
 .frame img {
@@ -26,8 +26,7 @@ header {
     height: clamp(200px, 5vw, 500px);
     display: block;
     margin: auto;
-    filter: drop-shadow(0px 0px 4px #2f93f8);
-    margin-top: 1em;
+    filter: drop-shadow(0px 0px 8px #2f93f8);
 }
 
 header h1 {
@@ -68,12 +67,6 @@ header h3::after {
     background-color: var(--timberwolf); /* Underline color */
   }
 
-.flex {
-    display: flex;
-    gap: 4em;
-    justify-content: center;
-}
-
 /* #blog {
     display: flex;
     width: 40%;
@@ -95,24 +88,29 @@ header h3::after {
 } */
 
 #github-icon {
-    width: clamp(60px, 5vw, 70px);
-    margin-top: 1em;
+    width: clamp(65px, 5vw, 90px);
     transition: scale 300ms ease-in-out;
+    margin-bottom: 30px;
 }
 
 #github-icon:hover {
     scale: 1.1
 }
 
+header a {
+    display: block;
+    margin-top: 15%;
+}
+
 .separator {
-    height: 18px;
+    height: 3vh;
     width: 100%;
     background-color: var(--selective-yellow);
 }
 
-.separator-header {
-    margin-top: 4em;
-}
+/* .separator-header {
+    margin-top: 2.2em;
+} */
 
 #contact {
     min-height: 40vh;
@@ -159,8 +157,8 @@ PROJECTS SECTION
 }
 
 .project {
-    height: clamp(225px, 20vh, 300px);
-    width: clamp(380px, 30vw, 800px);
+    height: clamp(200px, 20vh, 300px);
+    width: clamp(280px, 30vw, 800px);
     margin: auto;
     border-radius: 25px;
     box-shadow: 0px 0px 8px 3px rgba(228, 218, 216, .6);
